# tg-auction-bot

./: .dockerignore  Cargo.toml  Dockerfile  devenv.nix  devenv.yaml  fly.toml  rustfmt.toml
.sqlx/: query-16b30e78424db08af847ccb34f438ae8e50fdb879c8a16e7c65fb928eb8e4b9f.json  query-16ba216af0999b91a148f4f38e23ebb7892111ac1884af706f11ad5509db7d09.json  query-21cc698c06766e8f8f26e5dd1246a17a46c93050011ee7eff17a6740f3794c6d.json  query-27d114e30e8eee2d3478970940a2bc0c2da0cdcea89da9d41ecf25b2d3e0ad13.json  query-323c90e49cb333f523eebd9bc2ea3394b07866668be8c75df015fa8e43ac19ed.json  query-33b978efc3845d36711234974db65fd481700eb904575f1bd44b970fb1300e63.json  query-450f02c32da52e076c577359b9f26bfb4c272a2f5f5c955b3608180030ba1e9e.json  query-511556d435fefb986b5587c76cb4c267bcff0b35a1e4104951f9ec458d85ca83.json  query-5a14792eb20aca46a7a339833ac51177bbbc9d4a018d42e7ed68bc1180f974b9.json  query-5a8f00cc9112129dddf1b767f0fdffcbe9ebd00a15241590a665faa2cfaf7bd3.json  query-63b60e7c0fd758f0abb760d09177bbeea0b63dd22e95887cafd25d71a39117bc.json  query-68fa0b119bc3a56ce6f696fb487c38e640b06de51aad4141669736ecf8a60798.json  query-6b78c3793bb64135e7455649386b958344b464b7f503b6cee51f23508e079086.json  query-6fd58433b9ccf5b630cdfb08d90996fa89df5167fdc3f835a02c4037e504a112.json  query-8083cce16b71ea3b189fbac4211c6954da162dc4416d966ded709eb221190ec7.json  query-a034f110a0f909de4baa2b5df8841fd4bb72037b07114ee5446a546195153ee1.json  query-a566c46c6cfe49e37fdc43546f2ece5a447c96aa0a0692f9def08fa1e266fef8.json  query-b6ddb674d4aef6e2fa5bc0a9cdd2f8d58b1565f78e4f9dbf4184acf975d07b48.json  (+9 more)
(+19 files in other folders)
