[package]
name = "tg-auction-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
once_cell = "1.21.3"
regex = "1.11.3"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "uuid",
  "migrate",
  "chrono",
  "runtime-tokio",
] }
teloxide = { git = "https://github.com/teloxide/teloxide.git", features = [
  "macros",
] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
thiserror = "2.0.17"
